# SocketProgramming

./: README.md
Linux/TCP/: ClientSocket.cpp  ServerSocket.cpp
Linux/UDP/: ClientSocket.cpp  ServerSocket.cpp
Windows/TCP/src/: ClientSocket.cpp  ServerSocket.cpp
Windows/UDP/src/: CMakeLists.txt  ClientSocket.cpp  ServerSocket.cpp
